temp/seat/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seat
  namespace: seat
  labels:
    app: seat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seat
  template:
    metadata:
      labels:
        app: seat
    spec:
      containers:
        - name: seat-web
          image: eveseat/seat:4.2.9 
          args: ["web"]
          ports:
            - containerPort: 80
        - name: seat-worker
          image: eveseat/seat:4.2.9 
          args: ["worker"]
          ports:
            - containerPort: 80
        - name: seat-cron
          image: eveseat/seat:4.2.9 
          args: ["cron"]
          ports:
            - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/arch: amd64
