temp/seat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production 
    nginx.ingress.kubernetes.io/auth-url: |-
      https://auth.rwcloud.org/outpost.goauthentik.io/auth/nginx
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://auth.rwcloud.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;     
    hajimari.io/enable: "true"
    hajimari.io/icon: "rocket-launch"
    hajimari.io/group: apps
  name: seat
  namespace: seat
spec:
  ingressClassName: nginx
  rules:
  - host: seat.rwcloud.org
    http:
      paths:
      - backend:
          service:
            name: seat
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - seat.rwcloud.org
    secretName: seat-tls
